<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/qno1"
                android:textColor="@color/q_color"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/q1_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <RadioButton
                    android:id="@+id/q1_optionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno1_opA" />

                <RadioButton
                    android:id="@+id/q1_optionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno1_opB" />

                <RadioButton
                    android:id="@+id/q1_optionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno1_opC" />

                <RadioButton
                    android:id="@+id/q1_optionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno1_opD" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/qno2"
                android:textColor="@color/q_color"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/q2_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <RadioButton
                    android:id="@+id/q2_optionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno2_opA" />

                <RadioButton
                    android:id="@+id/q2_optionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno2_opB" />

                <RadioButton
                    android:id="@+id/q2_optionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno2_opC" />

                <RadioButton
                    android:id="@+id/q2_optionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno2_opD" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q3_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/qno3"
                android:textColor="@color/q_color"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/q3_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <RadioButton
                    android:id="@+id/q3_optionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno3_opA" />

                <RadioButton
                    android:id="@+id/q3_optionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno3_opB" />

                <RadioButton
                    android:id="@+id/q3_optionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno3_opC" />

                <RadioButton
                    android:id="@+id/q3_optionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno3_opD" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q4_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/qno4"
                android:textColor="@color/q_color"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/q4_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <RadioButton
                    android:id="@+id/q4_optionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno4_opA" />

                <RadioButton
                    android:id="@+id/q4_optionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno4_opB" />

                <RadioButton
                    android:id="@+id/q4_optionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno4_opC" />

                <RadioButton
                    android:id="@+id/q4_optionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qno4_opD" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q5_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/qno5"
                android:textColor="@color/q_color"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_rhino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rhino" />

            <CheckBox
                android:id="@+id/q5_optionA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/qno5_opA" />

            <CheckBox
                android:id="@+id/q5_optionB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/qno5_opB" />

            <CheckBox
                android:id="@+id/q5_optionC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/qno5_opC" />

            <CheckBox
                android:id="@+id/q5_optionD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/qno5_opD" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q6_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/qno6"
                android:textColor="@color/q_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/inp_ans6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/qno6_texthint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="result"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="reset"
                android:text="@string/reset"
                android:textColor="#ffffff"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>